# OSmosis

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  Makefile  README.md  devices.cfg  ebikes.cfg  flash-wizard-web.sh  flash-wizard.sh  medicat.cfg  microcontrollers.cfg  osmosis-web.sh  osmosis.sh  pyproject.toml  recover-t0lte.sh  requirements.txt  scooters.cfg  t2.cfg
.githooks/: commit-msg  pre-commit
docs/: CREDITS.md  MANIFESTO.md  README.md  ROADMAP.md  VISUAL-IDENTITY.md  ebike-research.md  links-sm-t805.md  reverse-engineering-communities.md
frontend/: eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
keys/: osmosis-project.pub
playbooks/: hardening.yml  locale.yml  network.yml  packages.yml  ssh-keys.yml
profiles/: amazon-firetv-stick.yaml  anbernic-rg35xx.yaml  bq-aquaris-u-plus.yaml  fairphone-4.yaml  fairphone-5.yaml  google-pixel7.yaml  gt-i8160.yaml  gt-n7100.yaml  gt-n7105.yaml  jetson-nano.yaml  jetson-orin-nano.yaml  kobo-ereader.yaml  lenovo-x200.yaml  lenovo-x230.yaml  librem-5.yaml  licheerv-dock.yaml  mi-11-lite-4g.yaml  mi-11-lite-5g.yaml  milkv-mars.yaml  miyoo-mini.yaml  moto-edge-40.yaml  moto-g-power-2024.yaml  moto-g54.yaml  moto-g84.yaml  nothing-1.yaml  nothing-2.yaml  nothing-2a.yaml  nothing-pacman.yaml  nothing-pong.yaml  nothing-spacewar.yaml  odroid-c4.yaml  odroid-m1.yaml  odroid-n2-plus.yaml  oneplus-6t.yaml  oneplus-7pro.yaml  oneplus-8t.yaml  oneplus-9.yaml  oneplus-nord-2.yaml  oneplus-nord.yaml  opi-5-plus.yaml  (+62 more)
scripts/: check-file-length.sh  check-profile-hashes.sh  (+8 more)
(+462 files in other folders)
