[project]
name = "osmosis"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S108",   # /tmp usage (intentional in tests)
    "S110",   # try-except-pass (best-effort system calls throughout)
    "S603",   # subprocess call with shell=false (expected in this project)
    "S607",   # partial path to executable (we call system tools by name)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "avd: tests requiring Android Studio emulator (AVD)",
]
